@@ -1,0 +1,13 @@
+{
+  "schema": "weftend.shadowAudit.request/0",
+  "v": 0,
+  "rulesetId": "SHADOW_RULESET_V0",
+  "stream": {
+    "schema": "weftend.shadowAudit.stream/0",
+    "v": 0,
+    "events": [
+      { "seq": 10, "kind": "STATE_CHECK", "side": "expected", "data": { "code": "CHECK_ONLY_EXPECTED" } }
+    ]
+  }
+}
+
